# sokoban_cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/libnop/include/nop/: serializer.h
include/libnop/include/nop/base/: set.h
include/libnop/include/nop/types/detail/: logical_buffer.h
include/sokoban/: definitions.h  sokoban.h  sokoban_base.h
packaging/: CMakeLists.txt  sokobanConfig.cmake
problems/: readme.md  unfiltered_test.txt  unfiltered_test_100.txt  unfiltered_train.txt
python/: pysokoban.cpp
python/pysokoban/: __init__.pyi
src/: assets_all.inc  definitions.h  sokoban_base.cpp  sokoban_base.h  util.cpp  util.h
test/: CMakeLists.txt  test.cpp  test_default.cpp  test_find_indices.cpp  test_serialize.cpp  test_speed.cpp  test_throughput.cpp
