[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pysokoban"
version = "1.0.4"
description = "Python Sokoban bindings"
dependencies = ["numpy"]

[tool.scikit-build]
wheel.packages = ["python/pysokoban"]
build.targets = ["pysokoban"]
cmake.build-type = "Release"
cmake.args = [
    "-DBUILD_PYTHON_MODULE=ON -DCMAKE_CXX_FLAGS='-g -O2 -fno-omit-frame-pointer'",
]
cmake.verbose = true
